--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.4|^8.0",
         "flipbox/lumen-generator": "^8.2",
         "laravel/lumen-framework": "^8.0",
-        "laravel/tinker": "^2.6"
+        "laravel/tinker": "^2.6",
+        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
