Youth Table Migration is ready

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "flipbox/lumen-generator": "^8.2",
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
-        "guzzlehttp/guzzle": "7.3"
+        "guzzlehttp/guzzle": "7.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
