youth guard add

--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.4|^8.0",
+        "ext-json": "*",
         "flipbox/lumen-generator": "^8.2",
+        "guzzlehttp/guzzle": "7.3",
         "laravel/lumen-framework": "^8.0",
         "laravel/tinker": "^2.6",
-        "guzzlehttp/guzzle": "7.3",
-        "ext-json": "*"
+        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
