Organizing the file system and remove unnecessary files and codes

--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,15 @@
     "type": "project",
     "require": {
         "php": "^7.4|^8.0",
-        "flipbox/lumen-generator": "^8.2",
+        "ext-json": "*",
+        "ext-pdo": "*",
         "laravel/lumen-framework": "^8.0",
-        "laravel/tinker": "^2.6"
+        "laravel/tinker": "^2.6",
+        "guzzlehttp/guzzle": "^7.3",
+        "felixkiss/uniquewith-validator": "^3.4",
+        "flipbox/lumen-generator": "^8.2",
+        "irazasyed/larasupport": "^1.7",
+        "phabloraylan/lumen-middleware-trim-or-convert-strings": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
