--- a/app/api-doc/youth-api-documentation.yaml
+++ b/app/api-doc/youth-api-documentation.yaml
@@ -634,7 +634,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/youthProfileRegistration'
+                $ref: '#/components/schemas/youthRegistration'
               example:
                 current_page: 1
                 total_page: 1
@@ -1737,9 +1737,6 @@ components:
         id:
           type: integer
           readOnly: true
-        username:
-          type: string
-          uniqueItems: true
         user_name_type:
           type: integer
           enum:
@@ -1806,10 +1803,8 @@ components:
           items:
             type: integer
             uniqueItems: true
-            enum:
-              - 1
-              - 2
-              - 3
+            example: 1
+          description: 1=> Visual Disabilities, 2=> Hearing Disabilities, 3=> Mental Health Disabilities,4=> Intellectual Disabilities, 5=> Social Disabilities
         password:
           type: string
           format: password
@@ -1831,34 +1826,9 @@ components:
           type: string
         village_or_area_en:
           type: string
-        house_n_road:
-          type: string
-        house_n_road_en:
-          type: string
         zip_or_postal_code:
           type: string
-        bio:
-          type: string
-        bio_en:
-          type: string
-        photo:
-          type: string
-        cv_path:
-          type: string
-        deleted_at:
-          type: string
-          format: date-time
-          readOnly: true
-        created_at:
-          type: string
-          format: date-time
-          readOnly: true
-        updated_at:
-          type: string
-          format: date-time
-          readOnly: true
       required:
-        - username
         - user_name_type
         - first_name
         - last_name
@@ -1870,8 +1840,8 @@ components:
         - password_confirmation
         - physical_disability_status
         - date_of_birth
-        - loc_district_id
         - loc_division_id
+        - loc_district_id
         - zip_or_postal_code
     youthProfile:
       type: object
@@ -1974,100 +1944,6 @@ components:
           type: string
           format: date-time
           readOnly: true
-      required:
-        - username
-        - first_name
-        - last_name
-        - email
-        - mobile
-        - loc_division_id
-        - loc_district_id
-    youthProfileRegistration:
-      type: object
-      description: Youth Profile Registration
-      properties:
-        is_freelance_profile:
-          type: string
-          default: 0
-        username:
-          type: string
-          uniqueItems: true
-        user_name_type:
-          type: integer
-          enum:
-            - 1
-            - 2
-          description: 1=>Email Type,2=>Mobile Number
-        first_name:
-          type: string
-          maximum: 500
-        first_name_en:
-          type: string
-          maximum: 500
-        last_name:
-          type: string
-          maximum: 500
-        last_name_en:
-          type: string
-          maximum: 500
-        gender:
-          type: integer
-          enum:
-            - 1
-            - 2
-            - 3
-          description: 1=>male,2=>female,3=>others
-        email:
-          type: string
-        mobile:
-          type: string
-        date_of_birth:
-          type: string
-          format: date-time
-        physical_disability_status:
-          type: integer
-          enum:
-            - 0
-            - 1
-          description: 0=>No,1=>Yes
-          default: 0
-        loc_division_id:
-          type: integer
-        loc_district_id:
-          type: integer
-        loc_upazila_id:
-          type: integer
-        village_or_area:
-          type: string
-          maximum: 500
-        village_or_area_en:
-          type: string
-          maximum: 500
-        house_n_road:
-          type: string
-          maximum: 500
-        house_n_road_en:
-          type: string
-          maximum: 500
-        zip_or_postal_code:
-          type: string
-          maximum: 10
-        bio:
-          type: string
-        bio_en:
-          type: string
-        photo:
-          type: string
-          maximum: 300
-        cv_path:
-          type: string
-          maximum: 300
-        row_status:
-          type: integer
-          description: Youth activation status
-          enum:
-            - 1
-            - 0
       required:
         - username
         - first_name
