base url updated in swagger json

--- a/api-doc/youth-api-documentation.yaml
+++ b/api-doc/youth-api-documentation.yaml
@@ -1,13 +1,11 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
   title: Youth Management Service
   description: Youth Management Service
   version: 1.0.0
 servers:
+  - url: https://youth.bus-staging.softbdltd.com/api/v1
   - url: http://localhost:8000/api/v1
-  - url: http://localhost:8001/api/v1
-  - url: http://localhost:8002/api/v1
-  - url: https://bus.softbd.xyz/devportal/apis
 security:
   - bearerAuth: []
 paths:
