--- a/api-doc/youth-api-documentation.yaml
+++ b/api-doc/youth-api-documentation.yaml
@@ -2205,7 +2205,12 @@ paths:
                   message: Language Proficiency added successfully
                   query_time: 0
       tags:
-        - Language Proficiency
+        - Language Proficiency...
+
+
+
+
+
   /youth-languages-proficiencies/{languageProficiencyId}:
     get:
       summary: get_one
@@ -2237,7 +2242,7 @@ paths:
                   code: 200
                   query_time: 0
       tags:
-        - Language Proficiency
+        - Language Proficiency....
     put:
       summary: update
       description: API endpoint to update the specified Language Proficiency. A successful request response will show 200 HTTP status code
@@ -2293,6 +2298,72 @@ paths:
                   query_time: 0
       tags:
         - Language Proficiency
+
+  /youth-guardians:
+    get:
+      description: Get all guardians of
+      parameters:
+        - name: name
+          in: query
+          description: The name of guardian returned
+          schema:
+            type: string
+            default: ''
+            example: Donald
+        - name: name_en
+          in: query
+          description: The name of guardian returned in English
+          schema:
+            type: string
+            default: ''
+            example: Donald
+        - name: page_size
+          in: query
+          description: The pages to return employee info
+          schema:
+            type: integer
+            minimum: 10
+            maximum: 20
+            example: 15
+        - name: order
+          in: query
+          description: The name of guardian returned
+          schema:
+            type: string
+            default: ''
+            example: ASC
+
+      responses:
+        '200':
+          description: MODELING EMPLOYEE
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref : '#/components/schemas/youthGuardianProp'
+      tags:
+        - Youth-Guardians
+
+
+  /youth-guardians/{id}:
+    get:
+      description: Obtain info about a specific youth guardian
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The Id of the employee
+          schema:
+            type: integer
+            example: 12
+      responses:
+        '200':
+          description: successfull
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/youthGuardianProp'
 components:
   securitySchemes:
     bearerAuth:
@@ -2300,6 +2371,42 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    youthGuardianProp:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 4
+        name:
+          type: string
+          example: Ryan Pinkman
+        name_en:
+          type: string
+          example: Ryan Pinkman2
+        nid:
+          type: string
+          example: 1aas345-poiu989-ssv56@@er5
+        mobile:
+          type: string
+          example: 0909876612
+        date_of_birth:
+          type: string
+          example: 12/12/1987
+        relationship_type:
+          type: string
+          example: parent
+        relationship_title:
+          type: string
+          example: father
+        relationship_title_en:
+          type: string
+          example: father
+        created_at:
+          type: string
+          example: 12/12/1987
+        updated_at:
+          type: string
+          example: 12/12/1987
     Youth:
       type: object
       description: Provide Youth Profile Information
